--- a/components/styles/TemplatesSection.module.scss
+++ b/components/styles/TemplatesSection.module.scss
@@ -52,7 +52,7 @@
     height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
   }
   
   
@@ -165,15 +165,25 @@
     }
   
     .cards {
-      flex-direction: row;
+      flex-direction: column;
       flex-wrap: wrap;
+      width: 100%;
       justify-content: center;
+      margin: 0 auto;
       gap: 1rem;
+
+      span {
+        display: none;
+      }
     }
   
     .card {
-      width: 45%; // ou 48% si tu veux en mettre 2 par ligne
+      width: 100%; // ou 48% si tu veux en mettre 2 par ligne
       min-width: 160px;
+
+      span {
+        display: none;
+      }
     }
   
     .customBlock {
@@ -188,8 +198,7 @@
       }
   
       .card {
-        width: 60%;
-        max-width: 300px;
+        width: 100%;
         margin: 0 auto;
       }
     }
