--- a/components/styles/UseCases.module.scss
+++ b/components/styles/UseCases.module.scss
@@ -1,7 +1,7 @@
 .useCases {
-    min-height: 800px;
     max-width: 1200px;
     margin: 0 auto;
+  padding-bottom: 50px;
 
     text-align: center;
   
@@ -29,7 +29,7 @@
   }
   
   .card {
-    width: 500px;
+    width: 450px;
     aspect-ratio: 2/3; // ✅ adapte automatiquement la hauteur en fonction de la largeur
     border-radius: 1rem;
     overflow: hidden;
@@ -54,10 +54,20 @@
         position: absolute;
         bottom: 0;
         width: 100%;
+        height: 30%;
         background: linear-gradient(to bottom right, #66ff75a4, #00d17dee);
-        padding: 1.2rem;
+        padding: 10px;
         backdrop-filter: blur(4px);
         color: #000;
+
+        h4 {
+          font-size: 1.3rem;
+          margin-bottom: 20px;
+        }
+
+        p {
+          font-size: 1rem;
+        }
       }
     }
   }
