--- a/components/styles/PricingSection.module.scss
+++ b/components/styles/PricingSection.module.scss
@@ -2,6 +2,8 @@
     padding: 5rem 2rem;
     text-align: center;
     background: none;
+    max-width: 1000px;
+    margin:0 auto;
   }
   
   .title {
@@ -21,7 +23,7 @@
   
   .container {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: flex-start;
     gap: 3rem;
     flex-wrap: wrap;
@@ -86,5 +88,89 @@
       }
     }
   }
+
+  .clinicOffer {
+    padding: 2.5rem;
+    border: 1px solid rgba(128, 128, 128, 0.2);
+    box-shadow: 0 5px 12px rgba(0, 0, 0, 0.05);
+    border-radius: 20px;
+    margin-top: 3rem;
+    background: white;
+    text-align: left;
+  
+    .clinicTitle {
+      font-weight: 700;
+      font-size: 1.8rem;
+      color: #111;
+      margin-bottom: 1.5rem;
+      text-align: center;
+    }
+  
+    .clinicContent {
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      gap: 40px;
+    }
+  
+    .clinicText,
+    .clinicContact {
+      flex: 1;
+      min-width: 280px;
+      text-align: justify;
+  
+      p {
+        font-size: 1rem;
+        color: #444;
+        margin-bottom: 1rem;
+        line-height: 1.6;
+      }
+  
+      a {
+        color: #00b976;
+        text-decoration: none;
+  
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+    }
+  
+    .clinicButton {
+      margin-top: 1rem;
+      background: linear-gradient(to bottom right, #66ff753d, #00d17d42);
+      color: #22222295;
+      font-weight: 500;
+      border: none;
+      padding: 0.8rem 2rem;
+      border-radius: 10px;
+      font-size: 1rem;
+      cursor: pointer;
+      transition: transform 0.3s ease;
+  
+      &:hover {
+        transform: translateY(-5px);
+      }
+    }
+  }
+
+  .secondTrialButton {
+    margin-top: 1rem;
+      background: linear-gradient(to bottom right, #66ff753d, #00d17d42);
+      color: #22222295;
+      font-weight: 500;
+      border: none;
+      padding: 0.8rem 2rem;
+      border-radius: 10px;
+      font-size: 1rem;
+      cursor: pointer;
+      transition: transform 0.3s ease;
+  
+      &:hover {
+        transform: translateY(-5px);
+      }
+  }
+  
+  
 
   
