--- a/components/styles/PricingSection.module.scss
+++ b/components/styles/PricingSection.module.scss
@@ -155,19 +155,19 @@
   }
 
   .secondTrialButton {
-    margin-top: 1rem;
-      background: linear-gradient(to bottom right, #66ff753d, #00d17d42);
+      background: none;
       color: #22222295;
       font-weight: 500;
-      border: none;
+      border: 2px solid #00d17d67;
       padding: 0.8rem 2rem;
       border-radius: 10px;
       font-size: 1rem;
       cursor: pointer;
-      transition: transform 0.3s ease;
+      transition: all 0.3s ease;
   
       &:hover {
         transform: translateY(-5px);
+        background: linear-gradient(to bottom right, #66ff753d, #00d17d42);
       }
   }
   
