--- a/components/styles/UseCases.module.scss
+++ b/components/styles/UseCases.module.scss
@@ -35,7 +35,8 @@
     overflow: hidden;
     position: relative;
     background: none;
-    box-shadow: 0 10 20px rgba(0, 0, 0, 0.1);
+    border: none;
+    box-shadow: 4px 10px 10px rgba(0, 0, 0, 0.25);
     transition: transform 0.3s ease;
   
     .image {
@@ -55,21 +56,24 @@
         bottom: 0;
         width: 100%;
         height: 30%;
-        background: rgba(255, 255, 255, 0.877);
+        background: linear-gradient(to bottom right, #66ff75a2, #00d17d);
         padding: 10px;
-        backdrop-filter: blur(4px);
-        color: #000;
+        color: white;
 
         h4 {
           font-size: 1.3rem;
           margin-bottom: 20px;
+          margin-top: 10px;
+          color: white;
         }
 
         p {
           font-size: 1rem;
+          color: white;
         }
       }
     }
+    
   }
   
   
@@ -146,11 +150,8 @@
           position: absolute;
           bottom: 0;
           width: 100%;
-          height: 30%;
-          background: rgba(255, 255, 255, 0.877);
+          height: 40%;
           padding: 0;
-          backdrop-filter: blur(4px);
-          color: #000;
   
           h4 {
             font-size: 1rem;
