--- a/components/styles/DogbotSection.module.scss
+++ b/components/styles/DogbotSection.module.scss
@@ -1,18 +1,18 @@
 .section {
-    padding: 5rem 2rem;
+    padding: 2rem 2rem;
     background-color: #ffffff;
     text-align: center;
   }
   
   .text {
-    max-width: 1000px;
+    max-width: 1400px;
     margin: 0 auto 3rem;
   
     h2 {
-      font-size: 2rem;
+      font-size: 2.5rem;
       font-weight: 700;
       margin-bottom: 1rem;
-      color: #222;
+      color: #222222bb;
     }
   
     p {
@@ -31,6 +31,25 @@
       height: auto;
       border-radius: 1rem;
       box-shadow: 0 8px 30px rgba(0, 0, 0, 0.08);
+    }
+  }
+
+  @media screen and (max-width:800px) {
+    .text {
+      h2 {
+        font-size: 1.8rem;
+        text-align: left;
+        font-weight: 700;
+        margin-bottom: 1rem;
+        color: #222222bb;
+      }
+    
+      p {
+        font-size: 1rem;
+        text-align: left;
+        color: #555;
+        line-height: 1.6;
+      }
     }
   }
 
