--- a/components/styles/PricingSection.module.scss
+++ b/components/styles/PricingSection.module.scss
@@ -1,107 +1,206 @@
 .section {
-    padding: 5rem 2rem;
+    padding-top: 20px;
     text-align: center;
-    background: none;
-    max-width: 1000px;
+    background: linear-gradient(180deg, #00d17d 0%, #66ff75 25%, #ffffff 37%);
+    min-height: 100vh;
+    max-width: 100vw;
     margin:0 auto;
   }
   
   .title {
-    margin-bottom: 3rem;
+    margin-top: 30px;
+    margin-bottom: 50px;
+
   
     h2 {
-      font-size: 2rem;
-      color: #222;
+      font-size: 2.5rem;
+      color: white;
       margin-bottom: 0.5rem;
     }
   
     p {
-      color: #555;
+      color: white;
+      font-weight: 600;
       font-size: 1.1rem;
     }
+  }
+
+  .ctaButton {
+    margin-top: 1rem;
+        background: white;
+        color: #22222295;
+        font-weight: 600;
+        border: none;
+        padding: 0.8rem 2rem;
+        border-radius: 100px;
+        font-size: 1rem;
+        cursor: pointer;
+        transition: background 0.3s;
+        box-shadow: 0 4 10 rgba(151, 151, 151, 0.425);
+        margin-bottom: 0px;
+
+  
+        &:hover {
+          background: linear-gradient(to bottom right, #66ff75, #00d17d);
+          color: white;
+        }
+
   }
   
   .container {
     display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    gap: 3rem;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
     flex-wrap: wrap;
     margin-bottom: 3rem;
+    padding: 0 30px;  
+    > div {
+      flex: 1;
+      min-width: 280px;
+      background: white;
+      border-radius: 1rem;
+      padding: 2rem;
+      box-shadow: 0 8px 25px rgba(0, 0, 0, 0.05);
+    }
   }
   
-  .features {
-    list-style: disc;
+  .standardOffer {
     text-align: left;
-    padding-left: 1.5rem;
+    max-width: 800px;
+    min-height: 360px;
   
-    li {
-      margin-bottom: 0.8rem;
-      font-size: 1rem;
-      color: #444;
-    }
-  }
-  
-  .priceBox {
-    background: white;
-    padding: 2rem;
-    border-radius: 1rem;
-    box-shadow: 0 8px 25px rgba(0, 0, 0, 0.05);
-    min-width: 260px;
-  
-    .price {
-      font-size: 1.8rem;
+    h3 {
+      font-size: 1.4rem;
       font-weight: 700;
-      color: #00b976;
+      margin-bottom: 1.5rem;
+      color: #222222bb;
+      padding-bottom: 10px;
+      border-bottom: 1px solid rgba(128, 128, 128, 0.226)
     }
   
-    .subPrice {
-      margin-top: 0.5rem;
-      font-size: 1rem;
-      color: #777;
+    .standardContent {
+      display: flex;
+      gap: 10px;
+      justify-content: space-between;
+      align-items: center;
+      flex-wrap: wrap;
+    }
+  
+    .features {
+      flex: 1;
+      list-style: disc;
+      padding-left: 1.5rem;
+  
+      li {
+        margin-bottom: 0.8rem;
+        font-size: 1rem;
+        color: #444;
+      }
+    }
+  
+    .priceBlock {
+      flex: 1;
+      min-width: 260px;
+    }
+  
+    .priceBox {
+      margin-bottom: 1.5rem;
+  
+      .price {
+        font-size: 1.8rem;
+        font-weight: 600;
+        color: #00b976;
+      }
+  
+      .subPrice {
+        margin-top: 0.5rem;
+        font-size: 1rem;
+        color: #777;
+      }
+    }
+  
+    .cta {
+      p {
+        font-size: 1rem;
+        color: #444;
+        margin: 0.2rem 0;
+      }
     }
   }
   
-  .cta {
-    margin-top: 2rem;
+  
+  .studentOffer {
+    text-align: left;
+    max-width: 800px;
+    min-height: 360px;
+    align-items:start;
+  
+    h3 {
+      font-size: 1.4rem;
+      font-weight: 700;
+      margin-bottom: 1rem;
+      color: #222222bb;
+      padding-bottom: 10px;
+      border-bottom: 1px solid rgba(128, 128, 128, 0.226)
+    }
   
     p {
-      margin: 0.3rem 0;
       font-size: 1rem;
       color: #444;
+      margin-bottom: 1rem;
     }
   
-    button {
-      margin-top: 1rem;
-      background: linear-gradient(to bottom right, #66ff753d, #00d17d42);
-      color: #22222295;
+    .studentPrice {
+      font-size: 2rem;
+      font-weight: 600;
+      color: #00b976;
+      margin: 1rem 0 0.5rem;
+    }
+  
+    .subInfo {
+      font-size: 0.95rem;
+      color: #777;
+    }
+  
+    .studentButton {
+      margin-top: 1.5rem;
+      background: none;
+      color: #222222bb;
       font-weight: 500;
-      border: none;
+      border: 2px solid #00d17d67;
       padding: 0.8rem 2rem;
       border-radius: 10px;
       font-size: 1rem;
       cursor: pointer;
-      transition: transform 0.3s ease;
+      transition: all 0.3s ease;
   
       &:hover {
+        background: linear-gradient(to bottom right, #66ff753d, #00d17d42);
         transform: translateY(-5px);
       }
     }
   }
+  
 
   .clinicOffer {
-    padding: 2.5rem;
+    padding: 20px 30px;
     border: 1px solid rgba(128, 128, 128, 0.2);
     box-shadow: 0 5px 12px rgba(0, 0, 0, 0.05);
     border-radius: 20px;
-    margin-top: 3rem;
+    margin: 10px 30px 0 30px;
     background: white;
     text-align: left;
+    max-width: 1650px;
+    margin: 0 auto;
+
   
     .clinicTitle {
       font-weight: 700;
       font-size: 1.8rem;
-      color: #111;
+      color: #222222bb;
+      padding-bottom: 10px;
+      border-bottom: 1px solid rgba(128, 128, 128, 0.226);
       margin-bottom: 1.5rem;
       text-align: center;
     }
