--- a/components/styles/PricingSection.module.scss
+++ b/components/styles/PricingSection.module.scss
@@ -36,7 +36,7 @@
         font-size: 1rem;
         cursor: pointer;
         transition: background 0.3s;
-        box-shadow: 0 4 10 rgba(151, 151, 151, 0.425);
+        box-shadow: 0 4px 10px rgba(151, 151, 151, 0.425);
         margin-bottom: 0px;
 
   
