--- a/components/styles/FinalCTASection.module.scss
+++ b/components/styles/FinalCTASection.module.scss
@@ -5,7 +5,7 @@
     padding: 4rem 2rem;
     text-align: center;
     max-width: 1400px;
-    margin: 4rem 2rem;
+    margin: 40px auto;
   
     h2 {
       font-size: 2.5rem;
