--- a/components/styles/NavBar.module.scss
+++ b/components/styles/NavBar.module.scss
@@ -3,7 +3,8 @@
   justify-content: space-between;
   align-items: center;
   padding: 0 20px;
-  max-width: 100vw;
+  max-width: 1400px;
+  margin: 0 auto;
   height: 70px;
   position: relative;
 }
@@ -59,12 +60,13 @@
 
 .button {
   background-color: white;
-  color: #222;
+  color: #222222bb;
   padding: 0.6rem 1.2rem;
   border-radius: 200px;
-  font-weight: 600;
+  font-weight: 500;
   text-decoration: none;
   transition: all 0.3s ease;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 
   &:hover {
     background-color: #f2f2f2;
