--- a/components/styles/PricingSection.module.scss
+++ b/components/styles/PricingSection.module.scss
@@ -1,7 +1,7 @@
 .section {
     padding-top: 20px;
     text-align: center;
-    background: linear-gradient(180deg, #00d17d 0%, #66ff75 25%, #ffffff 37%);
+    background: linear-gradient(165deg, #00d17d 0%, #66ff75 45%, #ffffff 57%);
     min-height: 100vh;
     max-width: 100vw;
     margin:0 auto;
@@ -49,19 +49,21 @@
   
   .container {
     display: flex;
+    max-width: 1400px;
+    margin: 0 auto;;
     justify-content: center;
     align-items: center;
     gap: 40px;
     flex-wrap: wrap;
     margin-bottom: 3rem;
-    padding: 0 30px;  
+    // padding: 0 30px;  
     > div {
       flex: 1;
       min-width: 280px;
       background: white;
       border-radius: 1rem;
       padding: 2rem;
-      box-shadow: 0 8px 25px rgba(0, 0, 0, 0.05);
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
     }
   }
   
@@ -185,13 +187,11 @@
 
   .clinicOffer {
     padding: 20px 30px;
-    border: 1px solid rgba(128, 128, 128, 0.2);
-    box-shadow: 0 5px 12px rgba(0, 0, 0, 0.05);
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
     border-radius: 20px;
-    margin: 10px 30px 0 30px;
     background: white;
     text-align: left;
-    max-width: 1650px;
+    max-width: 1400px;
     margin: 0 auto;
 
   
