--- a/components/styles/UseCases.module.scss
+++ b/components/styles/UseCases.module.scss
@@ -33,7 +33,7 @@
   border-radius: 15px;
   overflow: hidden;
   background: white;
-  box-shadow: 4px 10px 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
   transition: transform 0.3s ease;
   display: flex;
   flex-direction: column;
