--- a/components/styles/NavBar.module.scss
+++ b/components/styles/NavBar.module.scss
@@ -63,14 +63,14 @@
   color: #222222bb;
   padding: 0.6rem 1.2rem;
   border-radius: 200px;
-  font-weight: 500;
+  font-weight: 800;
   text-decoration: none;
   transition: all 0.3s ease;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 
   &:hover {
-    background-color: #f2f2f2;
-    transform: translateY(-3px);
+    transform: translateY(2px);
+    box-shadow: none;
   }
 }
 
