about section upgrade

--- a/components/styles/FinalCTASection.module.scss
+++ b/components/styles/FinalCTASection.module.scss
@@ -2,10 +2,10 @@
     background: linear-gradient(to bottom right, #66ff75, #00d17d);
     color: white;
     border-radius: 2rem;
-    padding: 4rem 2rem;
+    padding: 4rem 1rem;
     text-align: center;
     max-width: 1400px;
-    margin: 40px auto;
+    margin: 40px 10px;
   
     h2 {
       font-size: 2.5rem;
