--- a/components/styles/Header.module.scss
+++ b/components/styles/Header.module.scss
@@ -6,6 +6,10 @@
   min-height: 100vh;
   padding-top: 20px;
   max-width: 100vw;
+
+  @media screen and (max-width:785px) {
+    background: linear-gradient(180deg, #00d17d 0%, #66ff75 50%, #ffffff 57%);
+  }
 }
 
 .content {
