--- a/components/styles/PricingSection.module.scss
+++ b/components/styles/PricingSection.module.scss
@@ -56,7 +56,7 @@
     gap: 40px;
     flex-wrap: wrap;
     margin-bottom: 3rem;
-    // padding: 0 30px;  
+    padding: 0 30px;  
     > div {
       flex: 1;
       min-width: 280px;
@@ -187,7 +187,7 @@
 
   .clinicOffer {
     padding: 20px 30px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    // box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
     border-radius: 20px;
     background: white;
     text-align: left;
